<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3DDC4"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textTitle_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/pink_theme"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textUsername_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/username"
        android:textColor="@color/pink_theme"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle_register" />

    <EditText
        android:id="@+id/editTextUsername_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textUsername_register"
        app:layout_constraintTop_toBottomOf="@+id/textUsername_register" />

    <TextView
        android:id="@+id/textPassword_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/password"
        android:textColor="@color/pink_theme"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername_register"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername_register" />

    <EditText
        android:id="@+id/editTextPassword_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsername_register"
        app:layout_constraintStart_toStartOf="@+id/textUsername_register"
        app:layout_constraintTop_toBottomOf="@+id/textPassword_register" />

    <TextView
        android:id="@+id/textConfirmPassword_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/confirm_password"
        android:textColor="@color/pink_theme"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername_register"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword_register" />

    <EditText
        android:id="@+id/editTextConfirmPassword_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextUsername_register"
        app:layout_constraintStart_toStartOf="@+id/textUsername_register"
        app:layout_constraintTop_toBottomOf="@+id/textConfirmPassword_register" />

    <Button
        android:id="@+id/buttonRegister_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextConfirmPassword_register" />

</androidx.constraintlayout.widget.ConstraintLayout>